--- a/templates/index.html
+++ b/templates/index.html
@@ -3,39 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css"
-    href="{{ url_for('static', filename='dist/output.css') }}"/>
+    <title>Colossus Web</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dist/normalize.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='src/main.css') }}"/>
 </head>
 <body>
-    <h1>Python Flask Calculator</h1>
-    <form method="post" action="{{ url_for('operation_result') }}" id="calculator_form">
-        <label for="Input1">Input1:</label>
-        <input type="number" name="Input1" id="Input1">
-        <br/>
-        <label for="Input2">Input2:</label>
-        <input type="number" name="Input2" id="Input2">
-        <br/>
-        <label for="operation">Operation</label>
-        <select id="operation" name="operation">
-            <option value="+">Addition</option>
-            <option value="-">Subtraction</option>
-            <option value="/">Division</option>
-            <option value="*">Multiplication</option>
-            <option value="%">Modulus</option>
-        </select>
-        <br/>
-        <input type="submit" value="Submit"/>
-        <input type="reset"  value="RESET" style="color: red;"/>
-    </form>
-    {% if calculation_success == True %}
-        <br/>
-        <p>The calculation for {{input1}} {{operation}} {{input2}} is: {{result}}</p>
-    {% endif %}
-    {% if calculation_success == False %}
-        <br/>
-        <p>{{error}}</p>
-        <p>{{input1}} {{operation}} {{input2}} = "{{result}}"</p>
-    {% endif %}
+    <aside id='sidebar'>
+        <h1>Models</h1>
+        <button id="test">Click here!</button>
+        <div id="resizer"></div>
+    </aside>
+    <main>
+        <h1>Output</h1>
+        <div id="output"></div>
+    </main>
+    <script type="module" src="{{ url_for('static', filename='src/main.js') }}"></script>
 </body>
 </html>
