--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>Colossus Web</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dist/normalize.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='src/css/main.css') }}"/>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='dist/favicon.ico') }}">
 </head>
 <body>
     <script src="{{ url_for('static', filename='src/js/libs/signals.min.js') }}"></script>
