--- a/static/src/css/main.css
+++ b/static/src/css/main.css
@@ -191,33 +191,61 @@ button {
 	margin-left: 4px;
 }
 
-.sidebar-icon {
-	/* Gray/500 */
-	filter: brightness(0) saturate(100%) invert(44%) sepia(29%) saturate(275%) hue-rotate(182deg) brightness(92%) contrast(92%);
-}
-
-
-input[type="checkbox"] {
+.sidebar-expand {
+	width: 20px;
+	height: 20px;
 	position: relative;
 	appearance: none;
 	margin: 0;
 	cursor: pointer;
 }
 
-input[type="checkbox"]::before {
+.sidebar-expand::before {
 	position: relative;
 	display: block;
-	width: 16px;
-	height: 16px;
+	width: 20px;
+	height: 20px;
+	content: "";
+	background-image: url(../../dist/chevron-down.svg);
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	background-attachment: scroll;
+	transition: .1s;
+
+	/* Gray/500 */
+	filter: brightness(0) saturate(100%) invert(44%) sepia(29%) saturate(275%) hue-rotate(182deg) brightness(92%) contrast(92%);
+}
+
+.sidebar-expand:checked::before {
+/*	background-image: url(../../dist/chevron-right.svg);*/
+	transform: rotateZ(-90deg);
+}
+
+.sidebar-enabled {
+	width: 20px;
+	height: 20px;
+	position: relative;
+	appearance: none;
+	margin: 0;
+	cursor: pointer;
+	outline: none;
+}
+
+.sidebar-enabled::before {
+	position: relative;
+	display: block;
+	width: 20px;
+	height: 20px;
+	box-sizing: border-box;
 	content: "";
 	border: 1px solid var(--gray300);
-	border-radius: 4px;
+	border-radius: 6px;
 	transition: background-color .3s;
 	transition: border .3s;
 	transition: box-shadow .3s;
 }
 
-input[type="checkbox"]:checked::before {
+.sidebar-enabled:checked::before {
 	background-image: url(../../dist/check.svg);
 	background-position: 50% 50%;
 	background-size: .875rem .875rem;
@@ -225,18 +253,18 @@ input[type="checkbox"]:checked::before {
 	background-attachment: scroll;
 }
 
-input[type="checkbox"]:hover::before, input[type="checkbox"]:checked::before  {
+.sidebar-enabled:hover::before, .sidebar-enabled:checked::before  {
 	background-color: var(--primary50);
 	border-color: var(--primary600);
 }
 
-input[type="checkbox"]:focus::before  {
+.sidebar-enabled:focus::before  {
 	border-color: var(--primary300);
 	box-shadow: 0px 0px 0px 4px var(--primary100);
 	outline: 0px transparent !important;
 }
 
-input[type="checkbox"]:focus:checked::before  {
+.sidebar-enabled:focus:checked::before  {
 	border-color: var(--primary600);
 	background-color: var(--primary50);
 	box-shadow: 0px 0px 0px 4px var(--primary100);
