--- a/static/src/css/main.css
+++ b/static/src/css/main.css
@@ -84,13 +84,14 @@ h2 {
 	min-width: 200px;
 	border-right: var(--divider);
 	position: relative;
-	overflow: auto;
+	display: flex;
+	flex-direction: column;
 }
 
 #resizer {
 	position: absolute;
 	top: 32px;
-	left: 295px;
+	left: 300px;
 	width: 5px;
 	bottom: 0px;
 	cursor: col-resize;
@@ -120,7 +121,7 @@ button {
 
 	/* White */
 
-	background: #FFFFFF;
+	background: var(--white);
 	/* Gray/300 */
 
 	border: 1px solid var(--gray300);
@@ -133,7 +134,6 @@ button {
 
 	flex: none;
 	order: 0;
-	flex-grow: 0;
 
 	color: var(--gray700);
 
@@ -141,7 +141,7 @@ button {
 	font-weight: 600;
 	transition: .3s;
 
-	margin: 16px;
+	margin: 0 16px 16px;
 }
 
 .add-model:hover {
@@ -153,8 +153,50 @@ button {
 	outline: 0px transparent !important;
 }
 
-.sidebar-model:first-of-type {
-	border-top: 1px solid var(--gray300);
+.run-model {
+	/* Auto layout */
+
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	padding: 10px 16px;
+	gap: 8px;
+
+	height: 40px;
+
+	/* White */
+
+	background: var(--primary600);
+	/* Gray/300 */
+
+	border: 1px solid var(--primary600);
+	/* Shadow/xs */
+
+	box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+	border-radius: 8px;
+
+	/* Inside auto layout */
+
+	flex: none;
+	order: 0;
+
+	color: var(--white);
+
+	font: var(--textMd);
+	font-weight: 600;
+	transition: .3s;
+
+	margin: 0 16px 0 auto;
+}
+
+.run-model:hover {
+	background-color: var(--primary700);
+}
+
+.run-model:focus {
+	box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px var(--primary100);
+	outline: 0px transparent !important;
 }
 
 .sidebar-model {
@@ -163,8 +205,6 @@ button {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	padding: 4px 8px 12px;
-	gap: 4px;
 
 	/* White */
 
@@ -187,22 +227,29 @@ button {
 	gap: 4px;
 	align-items: center;
 	width: 100%;
+	padding: 4px 8px;
+	cursor: pointer;
+	user-select: none;
 }
 
-.sidebar-header h2 {
-	margin-left: 4px;
+.model-name {
+	margin: 0 32px 0 4px;
+	font: var(--textMd);
+	font-weight: 500;
+	color: var(--gray700);
+	border: none;
+	width: 100%;
+	flex-grow: 1;
+}
+
+.enable-toggle {
+	margin-left: auto;
 }
 
 .expand-toggle {
 	width: 20px;
 	height: 20px;
 	position: relative;
-	appearance: none;
-	margin-right: 0;
-	cursor: pointer;
-	border-radius: 6px;
-	transition: background-color .3s, border .3s, box-shadow .3s;
-	flex-grow: 1;
 }
 
 .expand-toggle::before {
@@ -221,8 +268,35 @@ button {
 	filter: brightness(0) saturate(100%) invert(44%) sepia(29%) saturate(275%) hue-rotate(182deg) brightness(92%) contrast(92%);
 }
 
-.expand-toggle:checked::before {
-	transform: rotateZ(180deg);
+.trash {
+	width: 20px;
+	height: 20px;
+	position: relative;
+	cursor: pointer;
+	padding: 0;
+	margin-left: 4px;
+	border: none;
+	background: none;
+}
+
+.trash::before {
+	position: relative;
+	display: block;
+	width: 20px;
+	height: 20px;
+	content: "";
+	background-image: url(../../dist/x.svg);
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	background-attachment: scroll;
+	margin-left:auto;
+
+	/* Gray/500 */
+	filter: brightness(0) saturate(100%) invert(44%) sepia(29%) saturate(275%) hue-rotate(182deg) brightness(92%) contrast(92%);
+}
+
+.trash:hover::before {
+	filter: brightness(0) saturate(100%) invert(13%) sepia(9%) saturate(2617%) hue-rotate(175deg) brightness(92%) contrast(91%);;
 }
 
 .checkbox {
@@ -230,7 +304,6 @@ button {
 	height: 20px;
 	position: relative;
 	appearance: none;
-	margin: 0;
 	cursor: pointer;
 	outline: none;
 }
@@ -274,9 +347,9 @@ button {
 }
 
 .sidebar-body {
-	padding: 4px 32px 0;
+	padding-left: 16px;
+	padding-bottom: 8px;
 	width: 100%;
-	transition: max-height 1s linear;
 	overflow: hidden;
 }
 
@@ -288,7 +361,87 @@ button {
 
 .sidebar-option > span {
 	display: inline-block;
-	width: 80px;
+	width: 100px;
 	font: var(--textSm);
 	font-weight: 500;
+}
+
+.sidebar-option .float {
+	width: 120px;
+}
+
+.model-container {
+	overflow: auto;
+	border-top: 1px solid var(--gray300);
+}
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: var(--gray200);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: var(--gray300);
+	border-radius: 8px;
+	border: 1px solid var(--gray200);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: var(--gray400);
+}
+
+.table {
+	/* Content */
+
+
+	/* Auto layout */
+
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	padding: 0px;
+	margin: 0 16px;
+
+	/* White */
+
+	background: var(--white);
+
+	/* Inside auto layout */
+
+	flex: none;
+	order: 0;
+	align-self: stretch;
+	flex-grow: 0;
+}
+
+.column {
+	/* Column */
+
+
+	/* Auto layout */
+
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding: 0px;
+
+	/* Inside auto layout */
+
+	flex: none;
+	order: 0;
+	flex-grow: 1;
+}
+
+.title-wrapper {
+	display: flex;
+	width: 100%;
+	align-items: center;
 }
