--- a/static/src/css/main.css
+++ b/static/src/css/main.css
@@ -66,14 +66,17 @@ body {
 	display: flex;
 }
 
+td {
+	padding: 0;
+}
+
 #sidebar {
 	width: 250px;
 	max-width: 350px;
-	min-width: 0;
+	min-width: min-content;
 	border-right: var(--divider);
 	display: flex;
 	flex-direction: column;
-	margin-top: 32px;
 }
 
 #resizer {
@@ -89,7 +92,6 @@ body {
 #output {
 	flex: 1;
 	background: var(--gray25);
-	margin-top: 32px;
 	overflow: auto;
 }
 
@@ -101,11 +103,9 @@ button {
 	/* Auto layout */
 
 	display: flex;
-	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	padding: 10px 16px;
-	gap: 8px;
 
 	width: calc(100% - 32px);
 	height: 40px;
@@ -145,17 +145,7 @@ button {
 }
 
 .run-model {
-	/* Auto layout */
-
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	padding: 10px 16px;
-	gap: 8px;
-
-	height: 40px;
-
+	padding: 4px 12px;
 	/* White */
 
 	background: var(--primary600);
@@ -165,29 +155,24 @@ button {
 	/* Shadow/xs */
 
 	box-shadow: 0 1px 2px rgba(16, 24, 40, 0.05);
-	border-radius: 8px;
-
-	/* Inside auto layout */
-
-	flex: none;
-	order: 0;
+	border-radius: 6px;
 
 	color: var(--white);
 
-	font: var(--textMd);
+	font: var(--textSm);
 	font-weight: 600;
 	transition: .3s;
 
-	margin: auto 16px 16px;
 	outline: none;
 }
 
 .run-model:hover {
 	background-color: var(--primary700);
+	border: 1px solid var(--primary700);
 }
 
 .run-model:focus {
-	box-shadow: 0 1px 2px rgba(16, 24, 40, 0.05), 0 0 0 4px var(--primary100);
+	box-shadow: 0 1px 2px rgba(16, 24, 40, 0.05), 0 0 0 4px var(--primary900);
 }
 
 .sidebar-model {
@@ -364,14 +349,6 @@ button {
 	padding-bottom: 8px;
 }
 
-.sidebar-body .input-container:last-child .input-wrapper, .sidebar-body .input-container:last-child .title-wrapper {
-	padding-bottom: 0;
-}
-
-.content .input-container:last-child .input-wrapper, .content .input-container:last-child .title-wrapper {
-	padding-bottom: 0;
-}
-
 .input-container .title-wrapper {
 	padding-right: 8px;
 	vertical-align: top;
@@ -418,11 +395,13 @@ label.tooltip:hover, label.tooltip:focus-visible {
 	content: "";
 	position: absolute;
 	top: calc(100% + 1px);
+	box-shadow: var(--shadowMd);
 	left: 4px;
-	height: 6px;
-	width: 12px;
-	background: inherit;
-	clip-path: polygon(0 0, 100% 0, 50% 100%);
+	width: 0;
+	height: 0;
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-top: 6px solid var(--gray900);
 }
 
 .tooltip-content.bottom.left {
@@ -436,7 +415,10 @@ label.tooltip:hover, label.tooltip:focus-visible {
 	bottom: calc(100% + 1px);
 	right: 4px;
 	left: initial;
-	clip-path: polygon(100% 100%, 0 100%, 50% 0);
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-bottom: 6px solid var(--gray900);
+	border-top: none;
 }
 
 .input-container .float {
@@ -514,33 +496,41 @@ label.tooltip:hover, label.tooltip:focus-visible {
 }
 
 #header {
+	display: flex;
 	position: absolute;
-	height: 32px;
+	height: 42px;
 	width: 100%;
 	border-bottom: var(--divider);
-	background: var(--primary700);
+	background: var(--gray900);
+	color: var(--gray100);
 	display: flex;
 	align-items: center;
 	justify-content: left;
 	padding-left: 8px;
 }
 
-#header h2 {
-	color: var(--white);
-	font: var(--textSm);
-	font-weight: 500;
-	margin: 0;
+#sidebar, #output {
+	margin-top: 42px;
 }
 
-#header img {
-	height: 20px;
+#header h2 {
+	font: var(--textMd);
+	font-weight: 500;
+	margin: 0;
+	margin-right: 12px;
+}
+
+#logo {
+	height: 24px;
 	margin-right: 4px;
 }
 
-.dropdown {
-	padding: 0;
-	right: 8px;
-	position: absolute;
+.right-align {
+	display: flex;
+	margin-left: auto;
+	align-items: center;
+	margin-right: 8px;
+	gap: 12px;
 }
 
 #info {
@@ -568,8 +558,8 @@ label.tooltip:hover, label.tooltip:focus-visible {
 .options {
 	position: fixed;
 	display: none;
-	top: 32px;
-	right: 0;
+	top: 48px;
+	left: 6px;
 	flex-direction: column;
 	color: var(--gray700);
 	background: var(--white);
@@ -578,6 +568,28 @@ label.tooltip:hover, label.tooltip:focus-visible {
 	border: 1px solid var(--gray300);
 	border-radius: 4px;
 	font: var(--textMd);
+	z-index: 1;
+}
+
+.options:before, .options:after {
+	content: "";
+	position: absolute;
+	height: 0;
+	width: 0;
+	bottom: 100%;
+	border-style: solid;
+}
+
+.options:after {
+	right: 107px;
+	border-width: 14px;
+	border-color: transparent transparent var(--white) transparent;
+}
+
+.options:before {
+	right: 106px;
+	border-width: 15px;
+	border-color: transparent transparent var(--gray300) transparent;
 }
 
 .dropdown:focus-within .options {
@@ -612,7 +624,7 @@ label.tooltip:hover, label.tooltip:focus-visible {
 	visibility: visible;
 }
 
-#tab button {
+#tab .header button {
 	border: 1px solid transparent;
 	border-bottom: 1px solid var(--gray200);
 	flex: 1;
@@ -624,24 +636,24 @@ label.tooltip:hover, label.tooltip:focus-visible {
 	transition: .1s background;
 }
 
-#tab button:hover {
+#tab .header button:hover {
 	background: var(--gray200);
 }
 
-#tab button[data-selected] {
+#tab .header button[data-selected] {
 	border: 1px solid var(--gray200);
-	border-bottom: none;
+	border-bottom: 1px solid var(--gray25);
 	background: var(--gray25);
 	border-top-left-radius: 6px;
 	border-top-right-radius: 6px;
 }
 
-#tab button[data-selected]:first-child {
+#tab .header button[data-selected]:first-child {
 	border-top-left-radius: 0;
 	border-left: 1px solid transparent;
 }
 
-#tab button[data-selected]:last-child {
+#tab .header button[data-selected]:last-child {
 	border-top-right-radius: 0;
 	border-left: 1px solid transparent;
 }
